--- a/Patcher/Patch.CrossPatcher.asmdef
+++ b/Patcher/Patch.CrossPatcher.asmdef
@@ -1,7 +1,7 @@
 {
     "name": "Patch.CrossPatcher",
     "rootNamespace": "",
-    "references": ["GUID:4e2d331d9b2f4c8b99929240985e55c9"],
+    "references": ["Lib.CrossPatcher"],
     "includePlatforms": [
         "Editor"
     ],
